# kaggle-spaceship-titanic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
.utils/: clear-output.sh  convert-notebooks.sh  pre-push.sh  pytest.sh
notebooks/: 0000-data-management.ipynb  01-data-explo.ipynb  0301-base-modelization.ipynb  0302-modelization copy 2.ipynb  0303-modelization copy.ipynb  06-datadrift.ipynb  0600-datadrift.ipynb
ressources/: hello.ipynb  spaceship-titanic-publicleaderboard-2023-11-01T00:52:39.csv
src/: _base_transformers.py  class_transformers.py  helpers.py  imports.py  pca.py  tools.py  transformers.py  var_transformers.py  vars.py
tests/: test_last_model.keep  test_last_model.py
utils/: pre-push.sh
