[tool.poetry]
name = "kaggle-spaceship-titanic"
version = "0.0.0"
description = "kaggle competition"
authors = ["Alex_Gazagnes"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{include = "kaggle_spaceship_titanic"}]

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.1.2"
pytest = "^7.4.3"
black = {extras = ["jupyter"], version = "^23.10.1"}
mypy = "^1.6.1"
flake8 = "^6.1.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.7"
fastapi = "^0.104.0"
streamlit = "^1.28.0"
jupytext = "^1.15.2"
coverage = "^7.3.2"
rich = "^13.6.0"
click = "^8.1.7"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
plotly = "^5.18.0"
seaborn = "^0.13.0"
scipy = "^1.11.3"
imbalanced-learn = "^0.11.0"
xgboost = "^2.0.1"
category-encoders = "^2.6.2"
requests = "^2.31.0"
uvicorn = "^0.23.2"
pylint = "^3.0.2"
lightgbm = "^4.1.0"
shap = "^0.43.0"
evidently = "^0.4.8"
pandarallel = "^1.6.5"
missingno = "^0.5.2"
yellowbrick = "^1.5"
ipywidgets = "^8.1.1"
session-info = "^1.0.0"
wheel = "^0.41.2"
setuptools = "^68.2.2"
ipykernel = "^6.26.0"
jupyter-contrib-nbextensions = "^0.7.0"
ipython = "^8.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
