[tool.poetry]
name = "kaggle-spaceship-titanic"
version = "0.0.0"
description = "kaggle competition"
authors = ["Alex_Gazagnes"]
license = "GNU GPLv3"
readme = "README.md"
# packages = [{include = "kaggle_spaceship_titanic"}]

[tool.poetry.dependencies]
python = "3.10.12"
# python = "3.12.1"
pandas = "^2.1.2"
pandarallel = "^1.6.5"
# fastapi = "^0.104.0"
# streamlit = "^1.28.0"
# rich = "^13.6.0"
# click = "^8.1.7"
# requests = "^2.31.0"
# uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.10.1"}
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
# notebook = "^7.0.6"
# jupyterlab = "^4.0.7"
# jupytext = "^1.15.2"
ipywidgets = "^8.1.1"
session-info = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
ipython = "^8.16.1"
wheel = "^0.41.2"
setuptools = "^68.2.2"
jupytext = "^1.16.1"
# jupyter = "^1.0.0"
jupyterlab = "^4.1.0"
notebook = "^7.0.7"
mkdocs = "^1.5.3"


[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.3.2"
imbalanced-learn = "^0.11.0"
xgboost = "^2.0.1"
category-encoders = "^2.6.2"
lightgbm = "^4.1.0"
shap = "^0.43.0"
yellowbrick = "^1.5"
kaggle = "^1.5.16"
catboost = "^1.2.2"
mlflow = {extras = ["all"], version = "^2.10.0"}

[tool.poetry.group.stats.dependencies]
scipy = "^1.11.3"
evidently = "^0.4.8"

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.8.0"
plotly = "^5.18.0"
seaborn = "^0.13.0"
missingno = "^0.5.2"

[tool.poetry.group.qa.dependencies]
pre-commit = "^3.6.0"
pep8 = "^1.7.1"
mypy = "^1.6.1"
flake8 = "^6.1.0"
pylint = "^3.0.2"
pycln = "^2.4.0"
bandit = "^1.7.7"
isort = "^5.13.2"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
vulture = "^2.11"
mccabe = "^0.7.0"
pyupgrade = "^3.15.0"
safety = "^3.0.1"
coverage = "^7.4.1"
# coverage = "^7.3.2"
coverage-badge = "^1.1.0"

[tool.pycln]
all = true

# [tool.mypy]
# show_error_codes = true
# ignore_missing_imports = true
# no_strict_optional = true

[tool.isort]
line_length = 88
multi_line_output = 3
# include_trailing_comma = true
# force_grid_wrap = 0
# use_parentheses = true
# ensure_newline_before_comments = true

[tool.black]
line-length = 88

[tool.vulture]
exclude = ["*file*.py", "dir/"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
make_whitelist = true
min_confidence = 80
paths = ["myscript.py", "mydir", "whitelist.py"]
sort_by_size = true
verbose = true







[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
